fix phone styling to work on firefox

--- a/website/stylus/styles.styl
+++ b/website/stylus/styles.styl
@@ -45,13 +45,15 @@ phone(phone-width = 100%, class-prefix = '')
     align-items center
     & .{class-prefix}camera
       background $dark-grey
-      margin-top 10%
+      position relative
+      top 4.6%
       width 4.4%
       height 2.1%
       border-radius 100%
     & .{class-prefix}speaker
       background $dark-grey
-      margin-top 3.5%
+      position relative
+      top 6.4%
       width 20.0%
       height 1.6%
       border-top-right-radius 12% 60%
@@ -61,7 +63,7 @@ phone(phone-width = 100%, class-prefix = '')
     & .{class-prefix}screen
       background $dark-grey
       position relative
-      margin-top 9.5%
+      top 11%
       width 85%
       height 72%
       & iframe
@@ -71,7 +73,8 @@ phone(phone-width = 100%, class-prefix = '')
         background $dark-grey
     & .{class-prefix}button
       background $light-grey
-      margin-top 6.9%
+      position relative
+      top 14.5%
       width 15.5%
       height 7.4%
       border-radius 100%
